# pptx2html

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPER.md  LICENSE  main.py  mkdocs.yml  noxfile.py  pyproject.toml
.agents/: OLD_AGENTS.md  code_quality_agent.md  issue_manager_agent.md  junior_developer_agent.md  user_tester_agent.md
.github/workflows/: ci.yml  docs.yml  release.yml
dev/: Test.pptx
docs/: index.md
examples/: runner.py
src/pptx2html/: __init__.py  api.py  exceptions.py
src/pptx2html/reporting/: report.py
tests/: test_exceptions.py  test_imports.py  test_sanity.py
