[project]
name = "pptx2html"
version = "0.0.1"
description = "Convert PowerPoint (.pptx) slides to single-file HTML with absolute layout."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Yatin Kare", email = "yatin.kare@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
  "lxml>=5.2",
  "pillow>=10.3",
  "fonttools>=4.53",
  "htpy>=25.8.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.17.1",
  "pre-commit>=3.7",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.25",
  "build>=1.2",
  "twine>=5.1",
  "griffe>=0.48",
]

[tool.ruff]
target-version = "py39"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
packages = ["pptx2html"]


[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q --disable-warnings --maxfail=1"

[dependency-groups]
dev = [
    "nox-uv>=0.6.2",
]
